fixed overflow bug

--- a/discordcolors.css
+++ b/discordcolors.css
@@ -21,5 +21,6 @@
     margin-top: 0.2vw;
     margin-bottom: 0.2vw;
     padding: 0.2vw;
-    border-radius: 0.4vw;;
+    border-radius: 0.4vw;
+    overflow: hidden;
 }
