--- a/style.css
+++ b/style.css
@@ -266,6 +266,7 @@ html {
   height: 40%;
   max-width: 100%;
   display: inline;
+  align-self: center;
 }
 
 .indexheadline {
